fix changes display collapsing
Previously it was possible for the show/more less button on the changes
block to be displayed even if the hidden content was a single line,
which was rather pointless. And after changing the font size, the
calculated sizes could be off by a fraction of a pixel, resulting in
showing the button but it doing nothing.

Fix collapsing to not apply if javascript is disabled, and include the
size of the button when calculating if it should be collapsable.

Also tweak the collapse height to be an integer multiple of the line
height, and remove some unneeded padding between change groups.

--- a/root/static/less/release.less
+++ b/root/static/less/release.less
@@ -52,13 +52,6 @@
         margin-bottom: 0px;
     }
 
-    .group-header {
-        margin-bottom: 1em;
-        &:last-child {
-            margin-bottom: 0em;
-        }
-    }
-
     ul, ul ul ul {
         list-style: disc;
     }
@@ -66,14 +59,21 @@
         list-style: circle;
     }
 
-    .show-more { display: none }
-    .hide-more { display: inline }
-    &.collapsed {
-        .show-more { display: inline }
-        .hide-more { display: none }
-        #last-changes-container {
-            overflow: hidden;
-            max-height: 20em;
+    &.collapsable {
+        #last-changes-toggle {
+            display: inline-block;
+        }
+
+        .show-more { display: none }
+        .hide-more { display: inline }
+        &.collapsed {
+            .show-more { display: inline }
+            .hide-more { display: none }
+
+            #last-changes-container {
+                overflow: hidden;
+                max-height: 20.02em;
+            }
         }
     }
 
